kubernetes/applications/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: everlab
