kubernetes/applications/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: everlab
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
    gethomepage.dev/description: Everlab service dashboard
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/href: https://homepage.prod.everlab.dev
    gethomepage.dev/app: homepage
    gethomepage.dev/weight: "10"

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - homepage.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 3000
          weight: 1
